<resources>
  <string name="app_name">仿学习通APP</string>

  <!-- 底部导航栏 -->
  <string name="bottom_nav_index">首页</string>
  <string name="bottom_nav_notification">通知</string>
  <string name="bottom_nav_notes">笔记</string>
  <string name="bottom_nav_me">我</string>

  <!-- 注册 & 登录 -->
  <string name="btn_register">注册</string>
  <string name="btn_login">登录</string>
  <string name="label_username">用户名</string>
  <string name="label_password">密码</string>
  <string name="label_gender">性别</string>
  <string name="label_gender_male">男</string>
  <string name="label_gender_female">女</string>
  <string name="label_introduction">个人简介</string>
  <string name="checkbox_keep_login">保持登录</string>
  <string name="btn_logout">退出登录</string>
  <string name="btn_registration">注册</string>

  <!-- 笔记界面 -->
  <string name="btn_adding_submit">添加</string>


  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>