<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".RegisterActivity">

  <TextView
    android:id="@+id/textView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="注册学习通账号"
    android:textSize="34sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="36dp"
    android:layout_marginTop="104dp"
    android:text="@string/label_username"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/registerUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="96dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintStart_toEndOf="@+id/textView3"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="44dp"
    android:text="@string/label_password"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <EditText
    android:id="@+id/registerPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:inputType="textPassword"
    app:layout_constraintStart_toEndOf="@+id/textView8"
    app:layout_constraintTop_toBottomOf="@+id/registerUsername" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="56dp"
    android:layout_marginTop="36dp"
    android:text="@string/label_gender"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <TextView
    android:id="@+id/textView11"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="40dp"
    android:text="确认密码"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView8" />

  <EditText
    android:id="@+id/registerRePassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:inputType="textPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.192"
    app:layout_constraintStart_toEndOf="@+id/textView11"
    app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

  <RadioGroup
    android:id="@+id/radioGroupGender"
    android:layout_width="160dp"
    android:layout_height="29dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="32dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toEndOf="@+id/textView7"
    app:layout_constraintTop_toBottomOf="@+id/registerRePassword">

    <RadioButton
      android:id="@+id/radioMale"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/label_gender_male" />

    <RadioButton
      android:id="@+id/radioFemale"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_gender_female" />

    <RadioButton
      android:id="@+id/radioUnknown"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="保密" />
  </RadioGroup>

  <TextView
    android:id="@+id/textView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="44dp"
    android:text="@string/label_introduction"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <EditText
    android:id="@+id/registerIntroduction"
    android:layout_width="wrap_content"
    android:layout_height="66dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="24dp"
    android:ems="10"
    android:gravity="start|top"
    android:inputType="textMultiLine"
    app:layout_constraintStart_toEndOf="@+id/textView9"
    app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

  <TextView
    android:id="@+id/textView12"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="204dp"
    android:layout_marginTop="12dp"
    android:text="已有账号？"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registerIntroduction" />

  <TextView
    android:id="@+id/toLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:text="点击登录"
    android:textColor="#FF6D00"
    app:layout_constraintStart_toEndOf="@+id/textView12"
    app:layout_constraintTop_toBottomOf="@+id/registerIntroduction" />

  <Button
    android:id="@+id/btnRegister"
    android:layout_width="242dp"
    android:layout_height="55dp"
    android:layout_marginTop="48dp"
    android:background="#00BFA5"
    android:text="@string/btn_register"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/registerIntroduction" />

</androidx.constraintlayout.widget.ConstraintLayout>